# apigratis-sdk-python

./: LICENSE  Pipfile  README  README.md  README.rst  pyproject.toml  setup.py
apigratis/: Service.py
apigratis-sdk-python/: Service.py  ServiceClass.py
apigratis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apigratis_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example.py
teste/: teste.py
