[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigratis"
description = "Transforme seus projetos em soluções inteligentes com nossa API. Com recursos como API do WhatsApp, geolocalização, rastreamento de encomendas, verificação de CPF/CNPJ e mais, você pode criar soluções eficientes e funcionais. Comece agora"
version = "1.0.0"
authors = [
  { name="APIBRASIL", email="contato@apibrasil.com.br" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Technology/Science",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/APIBrasil/apigratis-sdk-python"
"Repository" = "https://github.com/APIBrasil/apigratis-sdk-python.git"
"Bug Tracker" = "https://github.com/APIBrasil/apigratis-sdk-python/issues"

[project.scripts]
apigratis = "apigratis.__main__:main"