[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigratis-sdk-python"
description = "A ideia desse SDK é otimizar o tempo de código dos usuários auxiliando na integração com a plataforma"
version = "1.0.1"
authors = [
  { name="APIBRASIL", email="contato@apibrasil.com.br" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Technology/Science",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/APIBrasil/apigratis-sdk-python"
"Repository" = "https://github.com/APIBrasil/apigratis-sdk-python.git"
"Bug Tracker" = "https://github.com/APIBrasil/apigratis-sdk-python/issues"

[project.scripts]
apigratis = "apigratis.__main__:main"